# palette_st

./: README.md  app.py  palette.py  pyproject.toml  requirements.txt
