[tool.poetry]
name = "palette-st"
version = "0.1.0"
description = ""
authors = ["Gabryel Guedes <gabryelsguedes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
